--- a/table.html
+++ b/table.html
@@ -283,14 +283,14 @@
 
       #Major th {
         font-weight: 100;
-        font-size: 12px;
+        font-size: 20px;
         border: 1px solid #ddd;
         padding: 12px;
-        padding-top: 1px;
-        padding-bottom: 1px;
+        padding-top: 16px;
+        padding-bottom: 16px;
         text-align: center;
-        background-color: #8C2A05;
-        color: white;
+        background-color: yellow;
+        color: black;
       }
 
       #Major td{
@@ -300,7 +300,7 @@
         padding-top: 16px;
         padding-bottom: 16px;
         text-align: center;
-        background-color: #8C2A05;
+        background-color: white;
         color: black;
       }
 
@@ -312,24 +312,24 @@
 
       #Minor1 th {
         font-weight: 100;
-        font-size: 12px;
+        font-size: 20px;
         border: 1px solid #ddd;
         padding: 12px;
-        padding-top: 1px;
-        padding-bottom: 1px;
+        padding-top: 16px;
+        padding-bottom: 16px;
         text-align: center;
-        background-color: #A6502D;
+        background-color: skyblue;
         color: white;
       }
 
       #Minor1 td{
-        font-size: 17px;
+        font-size: 20px;
         border: 1px solid #ddd;
         padding:  12px;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 16px;
+        padding-bottom: 16px;
         text-align: center;
-        background-color: #A6502D;
+        background-color: white;
         color: black;
       }
 
@@ -341,24 +341,24 @@
 
       #Minor2 th {
         font-weight: 100;
-        font-size: 12px;
+        font-size: 20px;
         border: 1px solid #ddd;
         padding: 12px;
-        padding-top: 1px;
-        padding-bottom: 1px;
+        padding-top: 16px;
+        padding-bottom: 16px;
         text-align: center;
-        background-color: #C55B07;
+        background-color: pink;
         color: white;
       }
 
       #Minor2 td{
-        font-size: 14px;
+        font-size: 20px;
         border: 1px solid #ddd;
         padding:  12px;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 16px;
+        padding-bottom: 16px;
         text-align: center;
-        background-color: #C55B07;
+        background-color: white;
         color: black;
       }
 
@@ -468,7 +468,7 @@
             for($x = 0; $x < sizeof($nameList); $x ++){
       				//Minor1's percentage
       				echo "<tr id=\"Minor1\">";
-      				echo "<th id=\"Minor1\">Minor1</th>";
+      				echo "<th id=\"Minor1\">Minor I</th>";
       				echo "<th id=\"Minor1\"></th>";
 
       				//Minor1's Data
@@ -482,7 +482,7 @@
 				      if(sizeof($subNameList) > 0){
                 //Minor2's percentage
                 echo "<tr id=\"Minor2\">";
-                echo "<th id=\"Minor2\">Minor2</th>";
+                echo "<th id=\"Minor2\">Minor II</th>";
                 echo "<th id=\"Minor2\"></th>";
 
                 //Minor2's data
