--- a/adminTable.html
+++ b/adminTable.html
@@ -35,7 +35,7 @@
 
       function getTotalItemNumber(){
       	global $wpdb;
-      	$sum = $wpdb->get_results("SELECT * FROM Melody_items ");
+      	$sum = $wpdb->get_results("SELECT * FROM Melody_items_New ");
 
       	return sizeof($sum);
       }
@@ -58,11 +58,28 @@
 				}
       }
 
-      function getItemPriceByItemID($item_id)
-      {
-      	global $wpdb;
-      	$sum = $wpdb->get_results("SELECT Price FROM Melody_items WHERE item_no=$item_id");
-        return $sum[0]->Price;
+      function getIsInChinaByMemberId($memberId){
+        global $wpdb;
+        $result = $wpdb->get_results("SELECT isInChina FROM Teacher_infor WHERE Member=$memberId");
+        return $result[0]->isInChina;
+      }
+
+      function getIsAGroupByMemberId($memberId){
+        global $wpdb;
+        $result = $wpdb->get_results("SELECT isAGroup FROM Teacher_infor WHERE Member=$memberId");
+        return $result[0]->isAGroup;
+      }
+
+	  function getPriceCNByItemNo($itemNo){
+        global $wpdb;
+        $result = $wpdb->get_results("SELECT Price_CN FROM Melody_items_New WHERE Item_no=$itemNo");
+        return $result[0]->Price_CN;
+      }
+
+	  function getPriceSGByItemNo($itemNo){
+        global $wpdb;
+        $result = $wpdb->get_results("SELECT Price_SG FROM Melody_items_New WHERE Item_no=$itemNo");
+        return $result[0]->Price_SG;
       }
 
       $dateFrom;
@@ -93,8 +110,8 @@
 
       function getItemNameByItemID($item_id){
         global $wpdb;
-        $sum = $wpdb->get_results("SELECT Item FROM Melody_items WHERE item_no=$item_id");
-        return $sum[0]->Item;
+        $sum = $wpdb->get_results("SELECT Item_Name_SG FROM Melody_items_New WHERE item_no=$item_id");
+        return $sum[0]->Item_Name_SG;
       }
       function getLoginTimesFromMID($mId){
         global $wpdb;
@@ -118,6 +135,24 @@
           $dateFrom = $year."-".$month."-01";
           global $dateTo;
           $dateTo = $toyear."-".$nextMonth."-01";
+        }
+
+        function getIsModifiedPerformanceUsedByMemberId($memberId){
+            global $wpdb;
+            $result = $wpdb->get_results("SELECT isModifiedPerformanceUsed FROM Teacher_infor WHERE Member = $memberId");
+            return $result[0]->isModifiedPerformanceUsed;
+        }
+
+        function getModifiedPerformanceByMemberId($memberId){
+            global $wpdb;
+            $result = $wpdb->get_results("SELECT modifiedPerformance FROM Teacher_infor WHERE Member = $memberId");
+            return $result[0]->modifiedPerformance;
+        }
+
+        function getModifiedPerformanceDateByMemberId($memberId){
+            global $wpdb;
+            $result = $wpdb->get_results("SELECT modifiedPerformanceDate FROM Teacher_infor WHERE Member = $memberId");
+            return $result[0]->modifiedPerformanceDate;
         }
 
       if(isset($_POST['Month'])){
@@ -320,18 +355,21 @@
           <tr id="right_table">
             <th id="right_table">Item</th>
             <th id="right_table">Item_No</th>
-            <th id="right_table">Price</th>
+            <th id="right_table">Price_SG</th>
+            <th id="right_table">Price_CN</th>
           </tr>
 
           <?php
             $sum = getTotalItemNumber();
             for($i = 1; $i <= $sum; $i ++){
               $iName = getItemNameByItemID($i);
-              $iPrice = getItemPriceByItemID($i);
+              $iPriceSG = getPriceSGByItemNo($i);
+              $iPriceCN = getPriceCNByItemNo($i);
               echo "<tr id=\"right_table\">";
               echo "<td id=\"right_table\">$iName</td>";
               echo "<td id=\"right_table\">$i</td>";
-              echo "<td id=\"right_table\">$iPrice</td>";
+              echo "<td id=\"right_table\">$iPriceSG</td>";
+              echo "<td id=\"right_table\">$iPriceCN</td>";
               echo "</tr>";
             }
           ?>
@@ -342,16 +380,21 @@
         <h2><?php echo "From $dateFrom to $dateTo";  ?></h2>
         <table id="myTable">
           <tr class="Performance">
-            <th onclick="sortTableByName()" href="javascript:void(0);"><a href="#">Name</a></th>
+            <th onclick="sortTableByString(0)" href="javascript:void(0);"><a href="#">Name</a></th>
             <th onclick="sortTableByMID()" href="javascript:void(0);"><a href="#">MemberID</a></th>
             <?php
 
               for($i=1; $i<=$totalItemNumber;$i++){
-                echo "<th onclick=\"sortTable($i+1)\" href=\"javascript:void(0);\"><a href=\"#\">Item$i</a></th>";
+                echo "<th onclick=\"sortTableByInt($i+1)\" href=\"javascript:void(0);\"><a href=\"#\">Item$i</a></th>";
               }
             ?>
-            <th onclick="sortTable(<?php echo $totalItemNumber+2; ?>)" href="javascript:void(0);"><a href="#">Total</a></th>
-            <th onclick="sortTable(<?php echo $totalItemNumber+3; ?>)" href="javascript:void(0);"><a href="#">Login_Times</a></th>
+            <th onclick="sortTableByInt(<?php echo $totalItemNumber+2; ?>)" href="javascript:void(0);"><a href="#">Total</a></th>
+            <th onclick="sortTableByInt(<?php echo $totalItemNumber+3; ?>)" href="javascript:void(0);"><a href="#">Login_Times</a></th>
+            <th onclick="sortTableByString(<?php echo $totalItemNumber+4; ?>)" href="javascript:void(0);"><a href="#">Region</a></th>
+            <th onclick="sortTableByString(<?php echo $totalItemNumber+5; ?>)" href="javascript:void(0);"><a href="#">Category</a></th>
+            <th onclick="sortTableByString(<?php echo $totalItemNumber+6; ?>)" href="javascript:void(0);"><a href="#">Modified</a></th>
+            <th onclick="sortTableByInt(<?php echo $totalItemNumber+7; ?>)" href="javascript:void(0);"><a href="#">Modified Credit</a></th>
+            <th onclick="sortTableByString(<?php echo $totalItemNumber+8; ?>)" href="javascript:void(0);"><a href="#">Modified Date</a></th>
           </tr>
 
           <?php
@@ -368,12 +411,45 @@
           		for($i = 1; $i <= $totalItemNumber; $i++){
           		  $num = getNumOfItemByItemIDAndMemeberID($list[$x],$i);
           		  echo "<td>$num</td>";
-          		  $price = getItemPriceByItemID($i);
+                  $price = getPriceSGByItemNo($i);
+                  if(getIsInChinaByMemberId($list[$x]) == 1)  
+                  {
+                    $price = getPriceCNByItemNo($i);
+                  }
           		  $sale = $sale+$price*$num;
             	}
-            	echo "<td>$sale</td>";
+                echo "<td>$sale</td>";
+              //loginTimes
               $times = getLoginTimesFromMID($list[$x]);
               echo "<td>$times</td>";
+              //region
+              $region = "SINGAPORE";
+              if(getIsInChinaByMemberId($list[$x]) == 1)
+              {
+                  $region = "CHINA";
+              }
+              echo "<td>$region</td>";
+              //category
+              $category = "INDIVIDUAL";
+              if(getIsAGroupByMemberId($list[$x]) == 1)
+              {
+                  $category = "INSTITUTION";
+              }
+              echo "<td>$category</td>";
+              //modified
+              $modified = "No";
+              $modifiedCredit = 0;
+              $modifiedDate = "";
+              if(getIsModifiedPerformanceUsedByMemberId($list[$x]) == 1)
+              {
+                $modified = "Yes";
+                $modifiedCredit = getModifiedPerformanceByMemberId($list[$x]);
+                $modifiedDate = getModifiedPerformanceDateByMemberId($list[$x]);
+              }
+              echo "<td>$modified</td>";
+              echo "<td>$modifiedCredit</td>";
+              echo "<td>$modifiedDate</td>";
+
               echo "</tr>";
             }
           ?>
@@ -383,7 +459,7 @@
     </div>
 
     <script>
-      function sortTable(colnum) {
+      function sortTableByInt(colnum) {
         var table, rows, switching, i, x, y, shouldSwitch,numOfCol;
         table = document.getElementById("myTable");
         switching = true;
@@ -455,7 +531,7 @@
     }
   }
 }
-function sortTableByName() {
+function sortTableByString(column) {
   var table, rows, switching, i, x, y, shouldSwitch,numOfCol;
   table = document.getElementById("myTable");
   switching = true;
@@ -474,8 +550,8 @@ function sortTableByName() {
       shouldSwitch = false;
       /*Get the two elements you want to compare,
       one from current row and one from the next:*/
-      x = rows[i].getElementsByTagName("TD")[0];
-      y = rows[i + 1].getElementsByTagName("TD")[0];
+      x = rows[i].getElementsByTagName("TD")[column];
+      y = rows[i + 1].getElementsByTagName("TD")[column];
       //check if the two rows should switch place:
       if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
         //if so, mark as a switch and break the loop:
