--- a/adminTable.html
+++ b/adminTable.html
@@ -137,6 +137,37 @@
           $dateTo = $toyear."-".$nextMonth."-01";
         }
 
+        function getDatefromToByCurrent(){
+          $currentDate = date('Y-m-d');
+          $currentMonth = substr($currentDate,5,2);
+          $nextMonth = $currentMonth+1;
+          $year = substr($currentDate,0,4);
+          if($nextMonth>12)
+            {
+            $nextMonth="01";
+            $year++;
+            }
+          else if($nextMonth<10)
+            $nextMonth = "0".$nextMonth;
+          global $dateFrom;
+          global $dateTo;
+          $dateFrom = substr($currentDate,0,7)."-01";
+          $dateTo = $year."-".$nextMonth."-01";
+        }
+
+        function getDatefromByCurrentYear(){
+          $currentDate = date('Y-m-d');
+          $currentYear = substr($currentDate,0,4);
+          global $dateFrom;
+          $dateFrom = $currentYear."-01-01";
+        }
+
+        function getDateToByCurrentMonth(){
+          $currentDate = date('Y-m-d');
+          global $dateTo;
+          $dateTo = $currentDate;
+        }
+
         function getIsModifiedPerformanceUsedByMemberId($memberId){
             global $wpdb;
             $result = $wpdb->get_results("SELECT isModifiedPerformanceUsed FROM Teacher_infor WHERE Member = $memberId");
