--- a/login.html
+++ b/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
+
+<head>
     <?php
       /* 
       Template Name: login 
@@ -45,183 +46,187 @@
     ?>
     <meta charset="utf-8">
     <script>
-      function onSubmitForm(){
-        x=document.getElementById("User");
-        y=document.getElementById("pwd_val");
-        if(x.value.length>32){
-          alert("User Name is too long!(1-32)");
-          return false;
-        }
+        function onSubmitForm() {
+            x = document.getElementById("User");
+            y = document.getElementById("pwd_val");
+            if (x.value.length > 32) {
+                alert("User Name is too long!(1-32)");
+                return false;
+            }
 
-        if((y.value.length < 8)||(y.value.length>64)){
-          alert("Password length is between 8 to 64");
-          return false;
+            if ((y.value.length < 8) || (y.value.length > 64)) {
+                alert("Password length is between 8 to 64");
+                return false;
+            }
         }
-      }
     </script>
 
     <style>
-      * {
-          box-sizing: border-box;
-      }
+        * {
+            box-sizing: border-box;
+        }
 
-      body {
-        margin: 0;
-        height: 1000px;
-      }
+        body {
+            margin: 0;
+            height: 1000px;
+        }
 
-      /* Style the header */
-      .header {
-        background-color: #ffffff;
-        padding: 1px;
-        text-align: center;
-      }
+        /* Style the header */
+        .header {
+            background-color: #ffffff;
+            padding: 1px;
+            text-align: center;
+        }
 
-      /* Style the top navigation bar */
-      .topnav {
-        overflow: hidden;
-        background-color: #333;
-        width: 100%;
-      }
-
-      /* Style the topnav links */
-      .topnav a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      /* Change color on hover */
-      .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-
-      /* Create three equal columns that floats next to each other */
-      .column_left {
-          float: left;
-          width: 20%;
-          padding: 15px;
-      }
-      /* Create three equal columns that floats next to each other */
-      .column_center {
-          float: left;
-          width: 60%;
-          padding: 15px;
-      }
-      /* Create three equal columns that floats next to each other */
-      .column_right {
-          float: left;
-          width: 20%;
-          padding: 15px;
-      }
-
-      /* Clear floats after the columns */
-      .row:after {
-          content: "";
-          display: table;
-          clear: both;
-      }
-
-      /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-      @media (max-width:600px) {
-        .column {
+        /* Style the top navigation bar */
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
             width: 100%;
         }
-      }
 
-      .center_wrapper {
-        text-align:left;
-        margin:0 auto;
-        margin-top:100px;
-        border:#000;
-        width:600px;
-      }
+        /* Style the topnav links */
+        .topnav a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
 
-      .center_header {
-        background-color:#F5F5F5;
-        font-size:30px;
-        line-height:80px;
-        text-align:center;
-      }
+        /* Change color on hover */
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
 
-      .center_oneline {
-        width:100%;
-        border-left:#FC3 10px;
-        font-size:30px;
-        height:80px;
-        margin-top:3px;
-      }
+        /* Create three equal columns that floats next to each other */
+        .column_left {
+            float: left;
+            width: 20%;
+            padding: 15px;
+        }
 
-      .center_left {
-        background-color:#F5F5F5;
-        line-height:80px;
-        height:100%;
-        width:40%;
-        float:left;
-        padding-left:20px;
-      }
+        /* Create three equal columns that floats next to each other */
+        .column_center {
+            float: left;
+            width: 60%;
+            padding: 15px;
+        }
 
-      .center_right {
-        margin-left:20px;
-      }
+        /* Create three equal columns that floats next to each other */
+        .column_right {
+            float: left;
+            width: 20%;
+            padding: 15px;
+        }
 
-      .center_box {
-        width:50%;
-        height:70px;
-        margin-left:20px;
-        font-size:25px;
-      }
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
 
-      .center_btn {
-        background-color:#F5F5F5;
-        height:70px;
-        text-align:center;
-        margin-top:20px;
-      }
+        /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+        @media (max-width:600px) {
+            .column {
+                width: 100%;
+            }
+        }
 
-      .center_btn input {
-        font-size:30px;
-        height:50px;
-        width:300px;
-        border:5px;
-        line-height:30px;
-        margin-top:10px;
-        border-radius:50px;
-        background-color:#FFF;
-      }
+        .center_wrapper {
+            text-align: left;
+            margin: 0 auto;
+            margin-top: 100px;
+            border: #000;
+            width: 600px;
+        }
 
-      .center_btn input:hover{
-        cursor:pointer;
-        background-color:#FB4044;
-      }
+        .center_header {
+            background-color: #F5F5F5;
+            font-size: 30px;
+            line-height: 80px;
+            text-align: center;
+        }
 
-      .right_img {
-        margin-top:50px;
-        padding: 1px;
-        text-align: center;
-      }
+        .center_oneline {
+            width: 100%;
+            border-left: #FC3 10px;
+            font-size: 30px;
+            height: 80px;
+            margin-top: 3px;
+        }
 
-      a.news:link, a.news:visited {
-        color: red;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size:30px;
-      } 
+        .center_left {
+            background-color: #F5F5F5;
+            line-height: 80px;
+            height: 100%;
+            width: 50%;
+            float: left;
+            padding-left: 20px;
+        }
 
-        a.news:hover, a.news:active {
+        .center_right {
+            margin-left: 20px;
+        }
+
+        .center_box {
+            width: 40%;
+            height: 70px;
+            margin-left: 20px;
+            font-size: 25px;
+        }
+
+        .center_btn {
+            background-color: #F5F5F5;
+            height: 70px;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .center_btn input {
+            font-size: 30px;
+            height: 50px;
+            width: 300px;
+            border: 5px;
+            line-height: 30px;
+            margin-top: 10px;
+            border-radius: 50px;
+            background-color: #FFF;
+        }
+
+        .center_btn input:hover {
+            cursor: pointer;
+            background-color: #FB4044;
+        }
+
+        .right_img {
+            margin-top: 50px;
+            padding: 1px;
+            text-align: center;
+        }
+
+        a.news:link,
+        a.news:visited {
+            color: red;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 30px;
+        }
+
+        a.news:hover,
+        a.news:active {
             background-color: darkred;
-      }
+        }
     </style>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
+        <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
     </div>
 
     <div class="topnav">
@@ -230,54 +235,54 @@
 
     <div class="row">
 
-      <div class="column_left">
-      </div>
-
-      <div class="column_center">
-        <form method="post" onSubmit="return onSubmitForm()" accept-charset="utf-8">
-          <div class="center_wrapper">
-
-            <div class="center_header">
-              Login/登陆
-            </div>
-            <div class="center_oneline">
-              <div class="center_left">User Name/用户名:</div> 
-              <div class="center_right">
-                <input class="center_box" type="text" name="user" id="User" value="">
-              </div>
-            </div>
-            <div class="center_oneline">
-              <div class="center_left">Password/密码: </div>
-              <div class="center_right" >
-                <input  class="center_box" type="password" name="Password" id="pwd_val" value="" >
-              </div>
-            </div>
-            <div class="center_oneline center_btn">
-              <input  type="submit" value="Submit">
-            </div>
-          </div>
-        </form>
-        <br><br>
-        <br><br>
-
-<HR>
-<div style="text-align:center">    
-<a class="news" href="http://www.melodysac.com.sg/index.php/en/member_news/">LATEST INFORMATION</a>
-
-</div>
-<HR>
-<br><br>
-<br><br>
-
-        <div class="header">
-          <img src="<?php echo get_template_directory_uri(); ?>/test/Melodylogo.jpg" width="200">
+        <div class="column_left">
         </div>
-      </div>
 
-      <div class="column_right">
-      </div>
+        <div class="column_center">
+            <form method="post" onSubmit="return onSubmitForm()" accept-charset="utf-8">
+                <div class="center_wrapper">
+
+                    <div class="center_header">
+                        Login/会员登入
+                    </div>
+                    <div class="center_oneline">
+                        <div class="center_left">User Name/用户名:</div>
+                        <div class="center_right">
+                            <input class="center_box" type="text" name="user" id="User" value="">
+                        </div>
+                    </div>
+                    <div class="center_oneline">
+                        <div class="center_left">Password/密码: </div>
+                        <div class="center_right">
+                            <input class="center_box" type="password" name="Password" id="pwd_val" value="">
+                        </div>
+                    </div>
+                    <div class="center_oneline center_btn">
+                        <input type="submit" value="Submit/登入">
+                    </div>
+                </div>
+            </form>
+            <br><br>
+            <br><br>
+
+            <HR>
+            <div style="text-align:center">
+                <a class="news" href="http://www.melodysac.com.sg/index.php/en/member_news/">LATEST INFORMATION/最新消息</a>
+
+            </div>
+            <HR>
+            <br><br>
+            <br><br>
+
+            <div class="header">
+                <img src="<?php echo get_template_directory_uri(); ?>/test/Melodylogo.jpg" width="200">
+            </div>
+        </div>
+
+        <div class="column_right">
+        </div>
     </div>
 
-  </body>
-</html>
+</body>
 
+</html>
