Add no-login pages

--- a/login.html
+++ b/login.html
@@ -239,7 +239,7 @@
     </div>
 
     <div class="topnav">
-        <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
+        <a href="https://www.melodysac.com.sg/en/yuanfen_contactus_nologin/">Contact Us</a>
     </div>
 
     <div class="row">
@@ -276,7 +276,7 @@
 
             <HR>
             <div style="text-align:center">
-                <a class="news" href="http://www.melodysac.com.sg/index.php/en/member_news/">LATEST INFORMATION/最新消息</a>
+                <a class="news" href="https://www.melodysac.com.sg/en/yuanfen_latestinfo/ ">LATEST INFORMATION/最新消息</a>
 
             </div>
             <HR>
