--- a/layout1.html
+++ b/layout1.html
@@ -390,7 +390,7 @@
 
   <body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
+      <img src="<?php echo get_template_directory_uri(); ?>/test/manlianlogo2.png" width="161" height="137">
     </div>
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/melodysac_instruments/">MelodySAC Instruments</a>
