--- a/login.html
+++ b/login.html
@@ -235,7 +235,7 @@
 
 <body>
     <div class="header">
-        <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
+        <img src="<?php echo get_template_directory_uri(); ?>/test/manlianlogo2.png" width="161" height="137">
     </div>
 
     <div class="topnav">
@@ -283,9 +283,6 @@
             <br><br>
             <br><br>
 
-            <div class="header">
-                <img src="<?php echo get_template_directory_uri(); ?>/test/Melodylogo.jpg" width="200">
-            </div>
         </div>
 
         <div class="column_right">
