--- a/table.html
+++ b/table.html
@@ -430,7 +430,7 @@
       <a href="http://www.melodysac.com.sg/index.php/en/update_information/">Update Profile</a>
       <?php
        $contract = get_template_directory_uri()."/MemberInfo/"."/ContractPDF/".$_SESSION['username'].".pdf";
-       echo "<a href=\"$contract\" download=\"contract\">Contract Download</a>";
+       echo "<a href=\"$contract\" download=\"ManLian_Membership_Form\">Contract Download</a>";
       ?>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <a href="http://www.melodysac.com.sg/index.php/en/terms/">Terms&Conditions</a>
