--- a/adminTable.html
+++ b/adminTable.html
@@ -326,7 +326,7 @@
               echo "<td>$category</td>";
 
               //teacher grade
-              //echo "<td>$gradeName</td>";
+              echo "<td>$gradeName</td>";
               echo "</tr>";
             }
           ?>
